# 11402_CS5351_ProjectB

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpp-build-test.yml
data/: SpeciesInfo.csv
queries/: demo.sql
src/: csv.hpp  executor.hpp  main.cpp  query.hpp  table.hpp  value.hpp
tests/: test_main.cpp
